--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "@nrchkb/node-mihome",
-  "version": "0.0.32",
+  "name": "@nrchkb/mihome",
+  "version": "1.0.0-dev.0",
   "description": "Control Mi Home devices, such as Mi Robot Vacuums, Mi Air Purifiers, Mi Smart Home Gateway (Aqara) and more",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/maxinminax/node-mihome.git"
+    "url": "git+https://github.com/NRCHKB/node-mihome.git"
   },
-  "main": "lib/index.js",
+  "main": "dist/index.js",
   "directories": {
-    "lib": "lib"
+    "lib": "dist"
   },
   "engines": {
-    "node": ">=10.0.0"
+    "node": ">=14"
   },
   "keywords": [
     "xiaomi",
@@ -21,33 +21,111 @@
     "mihome",
     "mijia",
     "aqara",
-    "yeelight"
+    "yeelight",
+    "nrchkb"
   ],
-  "author": "maxinminax <ng.nhuphu@gmail.com>",
+  "contributors": [
+    {
+      "name": "Tadeusz Wyrzykowski",
+      "email": "shaquu@icloud.com",
+      "url": "https://github.com/Shaquu"
+    }
+  ],
   "license": "MIT",
   "devDependencies": {
+    "@types/glob": "^7.2.0",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^17.0.25",
+    "@types/node-fetch": "^2.6.1",
+    "@types/node-red": "^1.2.1",
+    "@types/yargs": "^17.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.7.0",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-node": "^11.1.0"
+    "eslint": "^8.13.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "node-json-minify": "^3.0.0",
+    "mocha": "^9.2.2",
+    "prettier": "^2.6.2",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
   },
   "dependencies": {
-    "chalk": "^4.1.0",
-    "debug": "^4.1.1",
-    "glob": "^7.1.6",
-    "node-fetch": "^2.6.0",
-    "randomstring": "^1.1.5",
-    "yargs": "^16.0.3"
+    "@nrchkb/logger": "^1.3.3",
+    "debug": "^4.3.4",
+    "node-fetch": "^2.6.7",
+    "yargs": "^17.4.1"
   },
   "bugs": {
-    "url": "https://github.com/maxinminax/node-mihome/issues"
+    "url": "https://github.com/NRCHKB/node-mihome/issues"
   },
-  "homepage": "https://github.com/maxinminax/node-mihome#readme",
+  "homepage": "https://github.com/NRCHKB/node-mihome#readme",
   "bin": {
-    "miio": "./cli/index.js"
+    "@nrchkb/mihome": "dist/cli.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --require ts-node/register src/**/*.spec.ts",
+    "prettier": "prettier --write src/**/*.ts",
+    "prettier:scripts": "prettier --write scripts/**/*.ts",
+    "build": "npm run clean && tsc",
+    "clean": "npx rimraf@3 dist/",
+    "cache": "ts-node scripts/generate-cache.ts",
+    "cli": "ts-node src/cli.ts"
+  },
+  "files": [
+    "/dist"
+  ],
+  "babel": {
+    "presets": [
+      "@babel/preset-typescript"
+    ]
+  },
+  "prettier": {
+    "tabWidth": 4,
+    "useTabs": false,
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "es5",
+    "endOfLine": "lf"
+  },
+  "eslintConfig": {
+    "env": {
+      "browser": true,
+      "es2021": true,
+      "node": true
+    },
+    "extends": [
+      "eslint:recommended",
+      "plugin:@typescript-eslint/recommended",
+      "plugin:prettier/recommended",
+      "prettier"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+      "ecmaVersion": "latest",
+      "sourceType": "module"
+    },
+    "plugins": [
+      "@typescript-eslint",
+      "prettier"
+    ],
+    "rules": {
+      "indent": [
+        "error",
+        4
+      ],
+      "linebreak-style": [
+        "error",
+        "unix"
+      ],
+      "quotes": [
+        "error",
+        "single"
+      ],
+      "semi": [
+        "error",
+        "never"
+      ]
+    }
   }
 }
