--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
     "noUnusedParameters": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
-    "importHelpers": true,
+    "importHelpers": false,
     "lib": [
       "ES2021.String"
     ]
