--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nrchkb/mihome",
-  "version": "1.0.0-dev.8",
+  "version": "1.0.0-dev.10Fix ",
   "description": "Control Mi Home devices, such as Mi Robot Vacuums, Mi Air Purifiers, Mi Smart Home Gateway (Aqara) and more",
   "repository": {
     "type": "git",
