--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nrchkb/mihome",
-  "version": "1.0.0-dev.19",
+  "version": "1.0.0-dev.21",
   "description": "Control Mi Home devices, such as Mi Robot Vacuums, Mi Air Purifiers, Mi Smart Home Gateway (Aqara) and more",
   "repository": {
     "type": "git",
@@ -38,8 +38,10 @@
     "@types/yargs": "^17.0.10",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
+    "jsonschema": "^1.4.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.14.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "mocha": "^9.2.2",
     "node-fetch-retry": "^2.0.0",
@@ -65,9 +67,10 @@
     "test": "mocha --require ts-node/register src/**/*.spec.ts",
     "prettier": "prettier --write src/**/*.ts",
     "prettier:scripts": "prettier --write scripts/**/*.ts",
-    "build": "npm run clean && tsc && npm run copy-files",
+    "build": "npm run validate && npm run clean && tsc && npm run copy-files",
     "clean": "npx rimraf@3 dist/",
     "cache": "ts-node scripts/generate-cache.ts",
+    "validate": "ts-node scripts/validate.ts",
     "copy-files": "npx copyfiles@2 -u 1 src/**/GITKEEP dist/"
   },
   "files": [
@@ -123,7 +126,8 @@
       "semi": [
         "error",
         "never"
-      ]
+      ],
+      "@typescript-eslint/no-var-requires": ["off"]
     }
   }
 }
